# BlockCompressor

./: CMakeLists.txt  README.md  build.sh  example.cfg
include/: BlockCompressor.h  BlockDecompressor.h  ConfigurationLiterate.h
include/zstd/: BlockCompressorZSTD.h
src/: BlockCompressor.cpp  BlockDecompressor.cpp  ConfigurationLiterate.cpp
src/lz4/: BlockDecompressorLZ4.cpp
src/zstd/: BlockCompressorZSTD.cpp  mainBlockCompressorZSTD.cpp  mainBlockDecompressorZSTD.cpp
